--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,7 @@ spring:
     active: dev
   jpa:
     show-sql: true
+    properties:
+      hibernate:
+        jdbc:
+          time_zone: Africa/Lagos
