Add mailtrap config

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -10,3 +10,9 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         ddl-auto: update
+  mail:
+    host: smtp.mailtrap.io
+    port: 2525
+    username: 7c5d677f552293
+    password: 7e6e5520f18147
+    protocol: smtp
