Adds proper syntax for config

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -9,7 +9,8 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
-        ddl-auto: update
+    hibernate:
+      ddl-auto: update
   mail:
     host: smtp.mailtrap.io
     port: 2525
