Changes config param to use env variable

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: ${DATABASE_URL:jdbc:postgresql://localhost:5432/piggybankdb}
+    url: jdbc:postgresql://${DB_HOST:localhost}:5432/${DB_NAME:piggybankdb}
     username: ${SPRING_DATASOURCE_USERNAME:piggybankuser}
-    password: ${SPRING_DATASOURCE_PASSWORD:password}
+    password: ${SPRING_DATASOURCE_PASSWORD:vikkidchamp}
     driverClassName: org.postgresql.Driver
   jpa:
     generate-ddl: true
